--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,15 +39,15 @@ dependencies:
   firebase_storage: ^11.5.1
   flutter:
     sdk: flutter
-  flutter_card_swiper: ^5.1.0
+  flutter_card_swiper: ^6.0.0
   flutter_launcher_icons: ^0.13.1
   get: ^4.6.5
   google_sign_in: ^6.1.4
-  http: ^0.13.5
+  http: ^1.1.2
   image_picker: ^1.0.0
   intl_phone_number_input: ^0.7.3+1
   photo_view: ^0.14.0
-  pin_code_fields: ^7.4.0
+  pin_code_fields: ^8.0.1
   provider: ^6.0.5
   share_plus: ^7.0.1
   shared_preferences: ^2.2.1
@@ -59,7 +59,9 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/launcher.png"
+  # image_path: "assets/images/launcher.png"
+  # changing the logo image
+  image_path: "assets/images/splashicon.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -91,10 +93,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Lato
+    - family: RobotoFlex
       fonts:
-        - asset: assets/fonts/Lato-Regular.ttf
-        - asset: assets/fonts/Lato-Medium.ttf
+        - asset: assets/fonts/RobotoFlex.ttf
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
