--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,7 +64,7 @@ android {
        release {
            keyAlias keystoreProperties['keyAlias']
            keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storeFile file ('E:/Github/cruxx.jks')
            storePassword keystoreProperties['storePassword']
        }
    }
