Updated on dependencies and application logo. (#21)
* added splash

* version updated

* updated the code base

* updated on the servies

* optimized the main

* removed the error in profile_view.dart

* added the divider

* changed the settings_view.dart

* fixed the image loading

* changed the liked button and removed the unwanted imports

* changed  and added_updateTopics functions

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw  GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -64,7 +64,7 @@ android {
        release {
            keyAlias keystoreProperties['keyAlias']
            keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storeFile file ('E:/Github/cruxx.jks')
            storePassword keystoreProperties['storePassword']
        }
    }
